--- a/part3/phonebook/backend/package.json
+++ b/part3/phonebook/backend/package.json
@@ -12,8 +12,11 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "4.21.1",
-    "morgan": "^1.10.0"
+    "mongodb": "6.10.0",
+    "mongoose": "8.7.2",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "nodemon": "3.1.7"
